--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -46,4 +46,4 @@ jobs:
 
     - name: Deploy to AKS
       run: |
-        kubectl apply -f kubernetes.yaml
+        kubectl apply -f deployment.yaml
