--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -20,8 +20,9 @@ jobs:
 
     - name: Build and push Docker image
       run: |
-        docker build . -t demoacrtest.azurecr.io/commette:${{ github.sha }}
-        docker push demoacrtest.azurecr.io/commette:${{ github.sha }}
+        docker build . -t demoacrtest.azurecr.io/commette:latest
+        docker tag commette demoacrtest.azurecr.io/commette:latest
+        docker push demoacrtest.azurecr.io/commette:latest
 
   deploy-to-aks:
     needs: build-and-push
@@ -47,7 +48,7 @@ jobs:
     - name: Deploy to AKS
       run: |
         kubectl apply -f deployment.yaml
-        
+
     - name: Get public IP of the service
       run: |
         IP=""
