--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: commette
-        image: demoacrtest.azurecr.io/commette:${{ github.sha }}
+        image: demoacrtest.azurecr.io/commette:latest
         ports:
         - containerPort: 8080
 
