--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -10,18 +10,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-
     - name: Log in to Azure Container Registry
       uses: azure/docker-login@v1
       with:
         login-server: demoacrtest.azurecr.io
         username: ${{ secrets.ACR_USERNAME }}
         password: ${{ secrets.ACR_PASSWORD }}
-
     - name: Build and push Docker image
       run: |
-        docker build . -t demoacrtest.azurecr.io/commette:${{ github.sha }}
-        docker push demoacrtest.azurecr.io/commette:${{ github.sha }}
+        docker build -t commette:latest .
+        docker tag commette:latest demoacrtest.azurecr.io/commette:latest
+        docker push demoacrtest.azurecr.io/commette:latest
 
   deploy-to-aks:
     needs: build-and-push
@@ -47,7 +46,7 @@ jobs:
     - name: Deploy to AKS
       run: |
         kubectl apply -f deployment.yaml
-
+        
     - name: Get public IP of the service
       run: |
         IP=""
