--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -16,6 +16,9 @@ jobs:
         login-server: demoacrtest.azurecr.io
         username: ${{ secrets.ACR_USERNAME }}
         password: ${{ secrets.ACR_PASSWORD }}
+    - name: Remove existing Docker image
+      run: |
+        docker pull demoacrtest.azurecr.io/commette:latest && docker rmi demoacrtest.azurecr.io/commette:latest || true
     - name: Build and push Docker image
       run: |
         docker build -t commette:latest .
