--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -16,15 +16,16 @@ jobs:
         login-server: demoacrtest.azurecr.io
         username: ${{ secrets.ACR_USERNAME }}
         password: ${{ secrets.ACR_PASSWORD }}
-    - name: Remove existing Docker image
-      run: |
-        docker pull demoacrtest.azurecr.io/commette:latest && docker rmi demoacrtest.azurecr.io/commette:latest || true
     - name: Build and push Docker image
       run: |
-        docker build -t commette:latest .
-        docker tag commette:latest demoacrtest.azurecr.io/commette:latest
-        docker push demoacrtest.azurecr.io/commette:latest
-
+        TAG=${GITHUB_SHA::8}
+        docker build -t commette:$TAG .
+        docker tag commette:$TAG demoacrtest.azurecr.io/commette:$TAG
+        docker push demoacrtest.azurecr.io/commette:$TAG
+    - name: Update Deployment
+      run: |
+        kubectl set image deployment/commette-deployment commette=demoacrtest.azurecr.io/commette:$TAG
+        
   deploy-to-aks:
     needs: build-and-push
     runs-on: ubuntu-latest
