--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -18,11 +18,14 @@ jobs:
         password: ${{ secrets.ACR_PASSWORD }}
     - name: Build and push Docker image
       run: |
-        TAG=${GITHUB_SHA::8}
+        TAG=$(echo $GITHUB_SHA | cut -c1-7)
         docker build -t commette:$TAG .
         docker tag commette:$TAG demoacrtest.azurecr.io/commette:$TAG
         docker push demoacrtest.azurecr.io/commette:$TAG
-   
+    - name: Update image in deployment
+      run: |
+        kubectl set image deployment/commette-deployment commette=demoacrtest.azurecr.io/commette:$TAG --record
+        
   deploy-to-aks:
     needs: build-and-push
     runs-on: ubuntu-latest
@@ -43,10 +46,7 @@ jobs:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
         resource-group: demo-terraform-kubernetes-RG
         cluster-name: demok8s
-    - name: Update Deployment
-      run: |
-        kubectl set image deployment/commette-deployment commette=demoacrtest.azurecr.io/commette:$TAG
-     
+
     - name: Deploy to AKS
       run: |
         kubectl apply -f deployment.yaml
