--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -20,11 +20,9 @@ jobs:
 
     - name: Build and push Docker image
       run: |
-        IMAGE_TAG=$(echo $GITHUB_SHA | cut -c1-7)
-        docker build -t commette:$IMAGE_TAG .
-        docker tag commette:$IMAGE_TAG demoacrtest.azurecr.io/commette:$IMAGE_TAG
-        docker push demoacrtest.azurecr.io/commette:$IMAGE_TAG
-        echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
+        docker build -t commette:latest .
+        docker tag commette:latest demoacrtest.azurecr.io/commette:latest
+        docker push demoacrtest.azurecr.io/commette:latest
 
   deploy-to-aks:
     needs: build-and-push
@@ -49,12 +47,8 @@ jobs:
 
     - name: Deploy to AKS
       run: |
-        kubectl set image deployment/commette-deployment commette=demoacrtest.azurecr.io/commette:${{ env.IMAGE_TAG }}
+        kubectl apply -f deployment.yaml
         
-    - name: Restart Pods in Deployment
-      run: |
-        kubectl rollout restart deployment/commette-deployment
-
     - name: Get public IP of the service
       run: |
         IP=""
