--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -49,6 +49,10 @@ jobs:
       run: |
         kubectl apply -f deployment.yaml
         
+    - name: Restart Kubernetes Cluster
+      run: |
+        kubectl rollout restart deployment commette-deployment
+
     - name: Get public IP of the service
       run: |
         IP=""
