--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -9,7 +9,7 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
 
     - name: Log in to Azure Container Registry
       uses: azure/docker-login@v1
@@ -28,7 +28,7 @@ jobs:
     needs: build-and-push
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
 
     - name: Azure Login
       uses: azure/login@v1
@@ -36,10 +36,10 @@ jobs:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
     - name: Set up Kubectl
-      uses: azure/setup-kubectl@v1
+      uses: azure/setup-kubectl@v3
 
     - name: Connect to AKS
-      uses: azure/aks-set-context@v1
+      uses: azure/aks-set-context@v2
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
         resource-group: demo-terraform-kubernetes-RG
@@ -62,4 +62,4 @@ jobs:
           [ -z "$IP" ] && sleep 10
         done
         echo "Service IP: $IP"
-        echo "The public IP of the service is $IP"
+        echo "The public IP of the service is $IP" | tee -a $GITHUB_ENV
