--- a/.github/workflows/ci-cd-azure.yml
+++ b/.github/workflows/ci-cd-azure.yml
@@ -25,7 +25,7 @@ jobs:
         docker push demoacrtest.azurecr.io/commette:latest
 
   continuous-deployment:
-    needs: build-and-push
+    needs: continuous-integration
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
